@@ -1,14 +1,17 @@
 package com.franchiseapp.service.impl;
 
+import com.franchiseapp.commons.dtos.BranchDTO;
 import com.franchiseapp.commons.dtos.FranchiseDTO;
 import com.franchiseapp.commons.dtos.UpdateNameDTO;
 import com.franchiseapp.commons.entities.FranchiseModel;
+import com.franchiseapp.repositories.BranchRepository;
 import com.franchiseapp.repositories.FranchiseRepository;
 import com.franchiseapp.service.FranchiseService;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -17,10 +20,12 @@ import java.util.stream.Collectors;
 public class FranchiseServiceImpl implements FranchiseService {
 
     private final FranchiseRepository franchiseRepository;
+    private final BranchRepository branchRepository;
 
     @Autowired
-    public FranchiseServiceImpl(FranchiseRepository franchiseRepository) {
+    public FranchiseServiceImpl(FranchiseRepository franchiseRepository, BranchRepository branchRepository) {
         this.franchiseRepository = franchiseRepository;
+        this.branchRepository = branchRepository;
     }
 
     @Override
@@ -46,12 +51,27 @@ public class FranchiseServiceImpl implements FranchiseService {
     }
 
     @Override
-    public List<FranchiseModel> getAllFranchises() {
+    public List<FranchiseDTO> getAllFranchises() {
 
-        return franchiseRepository.findAll()
+        var franchises = franchiseRepository.findAll()
                 .stream()
                 .filter(franchise -> franchise.getName() != null)
-                .collect(Collectors.toList());
+                .toList();
 
+        return franchises.stream()
+                .map(franchise -> {
+                    var branches = this.branchRepository.findByFranchiseId(franchise.getId());
+                    var branchDTOList = new ArrayList<BranchDTO>();
+                    branches.forEach(branch -> {
+                        var branchDto = new BranchDTO();
+                        branchDto.setId(branch.getId());
+                        branchDto.setName(branch.getName());
+                        branchDto.setFranchiseId(franchise.getId());
+                        branchDTOList.add(branchDto);
+                    });
+
+                    return FranchiseDTO.builder().id(franchise.getId()).name(franchise.getName())
+                            .branches(branchDTOList).build();
+                }).toList();
     }
 }
